--- a/TP1/CHP3/7506R_TP1_GRUPO05_CHP3_ENTREGA_(1).ipynb
+++ b/TP1/CHP3/7506R_TP1_GRUPO05_CHP3_ENTREGA_(1).ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -50,38 +50,17 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Defaulting to user installation because normal site-packages is not writeable\n",
-            "Requirement already satisfied: dtreeviz in /home/iara/.local/lib/python3.11/site-packages (2.2.2)\n",
-            "Requirement already satisfied: graphviz>=0.9 in /home/iara/.local/lib/python3.11/site-packages (from dtreeviz) (0.20.1)\n",
-            "Requirement already satisfied: pandas in /usr/lib64/python3.11/site-packages (from dtreeviz) (1.5.3)\n",
-            "Requirement already satisfied: numpy in /usr/lib64/python3.11/site-packages (from dtreeviz) (1.24.4)\n",
-            "Requirement already satisfied: scikit-learn in /usr/lib64/python3.11/site-packages (from dtreeviz) (1.1.2)\n",
-            "Requirement already satisfied: matplotlib in /usr/lib64/python3.11/site-packages (from dtreeviz) (3.7.3)\n",
-            "Requirement already satisfied: colour in /home/iara/.local/lib/python3.11/site-packages (from dtreeviz) (0.1.5)\n",
-            "Requirement already satisfied: pytest in /home/iara/.local/lib/python3.11/site-packages (from dtreeviz) (7.4.2)\n",
-            "Requirement already satisfied: contourpy>=1.0.1 in /usr/lib64/python3.11/site-packages (from matplotlib->dtreeviz) (1.0.7)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/lib/python3.11/site-packages (from matplotlib->dtreeviz) (0.11.0)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in /usr/lib64/python3.11/site-packages (from matplotlib->dtreeviz) (4.39.3)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/lib64/python3.11/site-packages (from matplotlib->dtreeviz) (1.4.5)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/lib/python3.11/site-packages (from matplotlib->dtreeviz) (23.0)\n",
-            "Requirement already satisfied: pillow>=6.2.0 in /usr/lib64/python3.11/site-packages (from matplotlib->dtreeviz) (9.4.0)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/lib/python3.11/site-packages (from matplotlib->dtreeviz) (3.0.9)\n",
-            "Requirement already satisfied: python-dateutil>=2.7 in /usr/lib/python3.11/site-packages (from matplotlib->dtreeviz) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3.11/site-packages (from pandas->dtreeviz) (2023.3.post1)\n",
-            "Requirement already satisfied: iniconfig in /home/iara/.local/lib/python3.11/site-packages (from pytest->dtreeviz) (2.0.0)\n",
-            "Requirement already satisfied: pluggy<2.0,>=0.12 in /home/iara/.local/lib/python3.11/site-packages (from pytest->dtreeviz) (1.3.0)\n",
-            "Requirement already satisfied: scipy>=1.3.2 in /usr/lib64/python3.11/site-packages (from scikit-learn->dtreeviz) (1.10.1)\n",
-            "Requirement already satisfied: joblib>=1.0.0 in /usr/lib/python3.11/site-packages (from scikit-learn->dtreeviz) (1.2.0)\n",
-            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/lib/python3.11/site-packages (from scikit-learn->dtreeviz) (3.1.0)\n",
-            "Requirement already satisfied: cloudpickle>=1.6 in /usr/lib/python3.11/site-packages (from joblib>=1.0.0->scikit-learn->dtreeviz) (2.2.1)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/lib/python3.11/site-packages (from python-dateutil>=2.7->matplotlib->dtreeviz) (1.16.0)\n"
+            "Note: you may need to restart the kernel to use updated packages.\n"
           ]
         },
         {
-          "name": "stdout",
+          "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Note: you may need to restart the kernel to use updated packages.\n"
+            "ERROR: Invalid requirement: \"'dtreeviz'\"\n",
+            "\n",
+            "[notice] A new release of pip is available: 23.2.1 -> 23.3.1\n",
+            "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
           ]
         }
       ],
@@ -91,11 +70,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 8,
       "metadata": {
         "id": "jY93Vy4LZixh"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'pandas'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[1;32mc:\\Users\\Iara\\Documents\\OrgaDeDatos\\7506R-2C2023-GRUPO05\\TP1\\CHP3\\7506R_TP1_GRUPO05_CHP3_ENTREGA_(1).ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Iara/Documents/OrgaDeDatos/7506R-2C2023-GRUPO05/TP1/CHP3/7506R_TP1_GRUPO05_CHP3_ENTREGA_%281%29.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Iara/Documents/OrgaDeDatos/7506R-2C2023-GRUPO05/TP1/CHP3/7506R_TP1_GRUPO05_CHP3_ENTREGA_%281%29.ipynb#W4sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpickle\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Iara/Documents/OrgaDeDatos/7506R-2C2023-GRUPO05/TP1/CHP3/7506R_TP1_GRUPO05_CHP3_ENTREGA_%281%29.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "import pickle\n",
